is an optional compile in the src/rt directory.  The output
model is more general in some respects and the operations more
efficient, but standard output is not supported, nor is ASCII
results data.

Added strnstr.c compatibility module in ray/src/common, since
it isn't present on Linux derivatives.

Added WGMDfunc material type with programmable roughness and
separate modifier paths for the different components.

Added gensurf -i option at the request of Peter Apian-Bennewitz
to reverse surface normals, mostly for data input, when it is
a bit more difficult to adjust.

Added rad -N option to rholo call for multiprocessing when
mkillum and/or mkpmap are involved in octree prep.

Added ability of gendaymtx to read EPW as well as WEA files.
When EPW input is provided, the 3-hour average dew point is
used to compute a more accurate precipitable water content
value.  It currently does not use these data directly from
the EPW input, relying instead on a dew-point-to-W calculation.
This follows the request and recommendations of David G-M.

Removed limitation in rfluxmtx, which was disallowing distant
and local receivers. Found this to be a perfectly valid approach
for some annual daylighting scenarios.

Wrote new pvsum tool to handle cases dctimestep can't, like
spectral input pictures.  It also adds a -N option for multi-
processing on Unix machines, which utilizes memory-mapped
inputs for efficient i/o sharing.

Made it so genBSDF can use spectral rendering for a
more accurate photometric result.

Changed default matrix representation to float rather than
double, which uses less RAM and supports faster operations
in general.  Build with compiler flag:
	-DDTnativeDTrmx_native=DTdouble
to get back higher precision representation.

Taoning Wang updated genssky and gensdaymtx to provide illuminance
calibration and accept EPW files directly as input.

Added -e expr and -f file.cal options to all rendering tools, not
just rcontrib/rxcontrib.  Feature request from Peter A-B.